[package]
name = "flux_core"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A framework for building LLM agents."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["bevy"]
bevy = ["dep:bevy", "bevy-trait-query"]
dynamic_linking = ["bevy?/dynamic_linking"]

[dependencies]
documented = "0.1.2"
serde = { version = "1.0.149", features = ["derive"] }
uuid = { version = "1.13", features = ["v4"] }
bevy = { git = "https://github.com/empathic-ai/bevy.git", branch = "reflect/serializable-dynamic-types", default-features = false, optional = true }
bevy-trait-query = { git = "https://github.com/Catchawink/bevy-trait-query.git", branch = "reflect/serializable-dynamic-types", optional = true }